After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732459 - rtspconnection: tunneled connections do not work if POST channel is established first
rtspconnection: tunneled connections do not work if POST channel is establish...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal normal
: 1.3.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-30 07:46 UTC by Branko Subasic
Modified: 2014-07-04 12:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch remedying the problem (12.29 KB, patch)
2014-06-30 07:47 UTC, Branko Subasic
none Details | Review

Description Branko Subasic 2014-06-30 07:46:26 UTC
It is not possible to start a tunneled RTSP session by establishing the HTTP POST connection first because the function gst_rtsp_connection_do_tunnel() assumes that the GET channel is established first.

I have attached a patch that modifies the function so it checks what type of connection was first established, GET or POST, and then merges them accordingly. The patch also includes a unit test for the case where the POST is established first.
Comment 1 Branko Subasic 2014-06-30 07:47:08 UTC
Created attachment 279577 [details] [review]
Proposed patch remedying the problem
Comment 2 Wim Taymans 2014-07-01 14:38:39 UTC
commit 0425f1cf4d085f1dc554d3c43d8a1492e9722c64
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Tue Jul 1 16:19:22 2014 +0200

    rtspconnection: also allow POST before GET
    
    Don't only allow GET and then POST request to setup tunneling over HTTP
    but also allow POST and then GET.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732459